[package]
name = "cryptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.10.0"
aes = "0.8.3"
generic-array = "0.14.0"
rand = "0.8.4"
dirs = "3.0.2"
walkdir = "2.3.2"
aes-stream = "0.2.1"
rust-crypto = "0.2.36"
